# portfoilio

./: README.md  pyproject.toml  script.sh
port2/: apps.py  views.py
port2/templates/: README.md  app.js  index.html
portfolio/: settings.py  urls.py
portfolio/templates/port2/: main.css
portweb/: apps.py  urls.py  views.py
portweb/static/: main.css
portweb/templates/: 404.html  index.html
