[tool.poetry]
name = "mysite"
version = "0.1.0"
description = "A portfolio webpage"
authors = ["notarjunvijayan <u2004019@rajagiri.edu.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"